# indi_pylibcamera

./: README.md  pyproject.toml  setup.py
src/indi_pylibcamera/: CameraControl.py  indi_pylibcamera.py
